use Threejs to manipulate panoramic image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Senegal map</h1>
 
-    <div class="main" id="app">
+    <div class="main">
       <div class="map">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -125,6 +125,9 @@
         </ul>
       </div>
     </div>
+
+    <div id="scene"></div>
+
     <script src="/main.js" type="module"></script>
   </body>
 </html>
