--- a/index.html
+++ b/index.html
@@ -128,6 +128,6 @@
 
     <div id="scene"></div>
 
-    <script src="/main.js" type="module"></script>
+    <script src="./main.js" type="module"></script>
   </body>
 </html>
